# fvckbot

./: .dockerignore  Dockerfile  LICENSE  Procfile  README.md  default.nix  flake.nix  fvckbot.cabal  fvckbot.db  pia.db  project.clj  screwed.db  shell.nix
.github/workflows/: publish-github-packages.yml
doc/: intro.md
src/: Main.hs
src/fvckbot/: brainfuck.clj  core.clj
test/fvckbot/: core_test.clj
