name:                fvckbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nicball/fvckbot#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Ballard
maintainer:          znhihgiasy@gmail.com
copyright:           reserved
category:            hobby
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fvckbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , BlockArguments
                     , DeriveAnyClass
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , direct-sqlite
                     , http-conduit
                     , lens
                     , lens-aeson
                     , random
                     , sqlite-simple
                     , text
                     , time
